[package]
name = "kuchikikiki"
version = "0.9.0"
authors = [
  "mwbot-rs Authors",
  "xtex <xtex@cnuser.wiki>",
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "HTML tree manipulation library"
repository = "https://github.com/xtexx/kuchikikiki"
edition = "2024"

[lib]
name = "kuchikikiki"

[dependencies]
cssparser = "0.35"
html5ever = "0.35.0"
selectors = "0.31"
indexmap = "2.2.6"
precomputed-hash = "0.1.1"
crc = "3.3.0"
bitflags = "2.9.3"

[dev-dependencies]
tempfile = "=3.21.0"
