[package]
name = "kuchikikiki"
version = "0.11.0"
authors = [
  "mwbot-rs Authors",
  "xtex <xtex@cnuser.wiki>",
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "HTML tree manipulation library"
repository = "https://github.com/xtexx/kuchikikiki"
edition = "2024"

[lib]
name = "kuchikikiki"

[dependencies]
cssparser = "0.36.0"
html5ever = "0.39.0"
selectors = "0.37"
indexmap = "2.14.0"
precomputed-hash = "0.1.1"
crc = "3.4.0"
bitflags = "2.11.1"

[dev-dependencies]
tempfile = "=3.27.0"
